--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "start": "tsc && node dist/index.js",
+    "start": "npm run build && node dist/index.js",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node -r tsconfig-paths/register src/index.ts'",
+    "build": "rollup --config rollup.config.ts --configPlugin typescript",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write src .eslintrc.cjs",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-typescript": "^11.1.1",
     "@types/node": "^20.2.5",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
@@ -21,8 +23,10 @@
     "eslint-config-prettier": "^8.8.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
+    "rollup": "^3.23.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
+    "tslib": "^2.5.2",
     "typescript": "^5.0.4"
   }
 }
