--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,12 +1,12 @@
 {
     "extends": "./tsconfig.json",
     "compilerOptions": {
-      "noEmit": true
+        "noEmit": true
     },
     "include": [
-      "src",
-      "test",
-      "tools",
-      "./.eslintrc.cjs"
+        "src",
+        "test",
+        "tools",
+        "rollup.config.ts"
     ]
-  }
+}
